--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -32,10 +32,90 @@ _inputs:
       empty_type: array
     cascade: true
 _structures:
-  Blocks:
+  blocks:
     style: select
-    id_key:
     values:
+     - label: bold heading
+       value: 
+         id: bold-heading
+         main-heading: This is a fun heading
+     - label: bold text section
+       value:
+         id: bold-text-section
+         text: >-
+          Sometimes all you need is a big random block of text to really drive home the point.
+     - label: facts section
+       value: 
+       - id: facts-section
+         facts-loop:
+          - heading: Fact
+            fact: 1 Mil
+          - heading: Fact
+            fact: 200M
+          - heading: Fact
+            fact: 500+
+         text: >-
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis error sunt aliquam cumque architecto molestiae omnis voluptatem perferendis, amet vero voluptas maiores repellendus modi magnam excepturi facere ratione est? Tenetur!
+     - label: image banner
+       value:
+        id: image-banner
+        photo-banner:
+        image: >-
+          https://images.unsplash.com/photo-1567073161926-d6179e60492f?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+     - label: image grid section
+       value: 
+        id: image-grid-section
+        heading: Another one
+        photos:
+        - image: >-
+            https://images.unsplash.com/photo-1580113224483-6e03c7b6fe6a?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+          alt:
+        - image: >-
+            https://images.unsplash.com/photo-1563967949-d97cba787cae?q=80&w=2322&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+          alt:
+        - image: >-
+            https://images.unsplash.com/photo-1708711973477-1373f8eb65db?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+          alt:
+        - image: >-
+            https://images.unsplash.com/photo-1666136242426-761b173a1412?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+          alt:
+        - image: >-
+            https://images.unsplash.com/photo-1582790269393-a54326674cf3?q=80&w=2235&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+          alt:
+        - image: >-
+            https://images.unsplash.com/photo-1687291834006-3c1a3c7d7ff3?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+          alt:
+        button-text: Contact us
+     - label: info section
+       value: 
+         id: info-section
+         columns:
+          - heading: Heading
+            text: >-
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam
+              modi accusantium repellat quibusdam autem dolorem optio.
+          - heading: Heading
+            text: >-
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam
+              modi accusantium repellat quibusdam autem dolorem optio.
+          - heading: Heading
+            text: >-
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam
+              modi accusantium repellat quibusdam autem dolorem optio.
+     - label: text and image grid
+       value: 
+         id: text-and-image-grid
+         heading: another heading
+         text-1: >-
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ullam debitis ipsa nemo unde omnis nisi, corporis ex asperiores minus sequi perferendis alias. Nisi quod vero incidunt, sapiente reiciendis ducimus!
+         text-2: >-
+          Temporibus ullam debitis ipsa nemo unde omnis nisi, corporis ex asperiores minus sequi perferendis alias. Nisi quod vero incidunt, sapiente eiciendis ducimus! Lorem ipsum dolor sit elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         button-text: learn more
+         image: >-
+          https://images.unsplash.com/photo-1603806450478-18e70c5e8a94?q=80&w=2235&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+
+
 _snippets:
   _cc_jekyll_unknown_paired_tag:
     hidden: true
